--- a/CsNet/CsNet.csproj
+++ b/CsNet/CsNet.csproj
@@ -40,16 +40,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FResult.cs" />
-    <Compile Include="MsgManager.cs" />
+    <Compile Include="Core\SocketHandler.cs" />
+    <Compile Include="Core\SocketListener.cs" />
+    <Compile Include="Dispatcher\Dispatcher.cs" />
+    <Compile Include="Dispatcher\Worker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketMsg.cs" />
+    <Compile Include="Socket\FResult.cs" />
     <Compile Include="Socket\SocketBase.cs" />
-    <Compile Include="Socket\SocketHandler.cs" />
-    <Compile Include="Socket\SocketListener.cs" />
+    <Compile Include="Core\SocketDispatcher.cs" />
+    <Compile Include="ControlManager.cs" />
     <Compile Include="Socket\SocketTcp.cs" />
+    <Compile Include="Core\SocketWorker.cs" />
     <Compile Include="Util\Logger.cs" />
     <Compile Include="Util\Util.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
