--- a/CsNet/CsNet.csproj
+++ b/CsNet/CsNet.csproj
@@ -40,10 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\SocketMaster.cs" />
+    <Compile Include="Dispatcher\Loopable.cs" />
     <Compile Include="Dispatcher\Runnable.cs" />
     <Compile Include="Core\SocketHandler.cs" />
     <Compile Include="Core\SocketListener.cs" />
     <Compile Include="Dispatcher\Dispatcher.cs" />
+    <Compile Include="Dispatcher\Master.cs" />
     <Compile Include="Dispatcher\Worker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketAccepter.cs" />
