Update directory struct.

--- a/CsNet/CsNet.csproj
+++ b/CsNet/CsNet.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\AvlTree.cs" />
     <Compile Include="Core\SocketMaster.cs" />
     <Compile Include="Dispatcher\Loopable.cs" />
     <Compile Include="Dispatcher\Runnable.cs" />
@@ -57,7 +58,6 @@
     <Compile Include="ControlManager.cs" />
     <Compile Include="Socket\SocketTcp.cs" />
     <Compile Include="Core\SocketWorker.cs" />
-    <Compile Include="Util\AvlTree.cs" />
     <Compile Include="Util\Logger.cs" />
     <Compile Include="Util\Utility.cs" />
   </ItemGroup>
