--- a/CsNet/CsNet.csproj
+++ b/CsNet/CsNet.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\AvlTree.cs" />
+    <Compile Include="Collections\Cache.cs" />
     <Compile Include="Core\SocketMaster.cs" />
     <Compile Include="Dispatcher\Loopable.cs" />
     <Compile Include="Dispatcher\Runnable.cs" />
