--- a/CsNet/CsNet.csproj
+++ b/CsNet/CsNet.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Collections\AvlTree.cs" />
     <Compile Include="Collections\Cache.cs" />
+    <Compile Include="Collections\BinaryTree.cs" />
+    <Compile Include="Collections\RBTree.cs" />
     <Compile Include="Core\SocketMaster.cs" />
     <Compile Include="Dispatcher\Loopable.cs" />
     <Compile Include="Dispatcher\Runnable.cs" />
