--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsNet\RBTreeTest.cs" />
     <Compile Include="CsNet\AvlTreeTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
