--- a/CsNet/CsNet.csproj
+++ b/CsNet/CsNet.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Collections\AvlTree.cs" />
     <Compile Include="Collections\Cache.cs" />
     <Compile Include="Collections\BinaryTree.cs" />
+    <Compile Include="Collections\IBinaryTree.cs" />
     <Compile Include="Collections\RBTree.cs" />
     <Compile Include="Core\SocketMaster.cs" />
     <Compile Include="Dispatcher\Loopable.cs" />
