--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsNet\BinaryTreeTest.cs" />
-    <Compile Include="CsNet\RBTreeTest.cs" />
-    <Compile Include="CsNet\AvlTreeTest.cs" />
+    <Compile Include="CsUtil\Collections\Tree\BinaryTree\AvlTreeTest.cs" />
+    <Compile Include="CsUtil\Collections\Tree\BinaryTree\BinaryTreeTest.cs" />
+    <Compile Include="CsUtil\Collections\Tree\BinaryTree\RBTreeTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestUtility.cs" />
@@ -54,9 +54,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CsNet\CsNet.csproj">
+    <ProjectReference Include="..\CsUtil\CsUtil.csproj">
       <Project>{98131d90-a25e-4f86-8d90-c02eac8349bd}</Project>
-      <Name>CsNet</Name>
+      <Name>CsUtil</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
