--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsUtil\Collections\Tree\BinaryTree\AvlTreeTest.cs" />
-    <Compile Include="CsUtil\Collections\Tree\BinaryTree\BinaryTreeTest.cs" />
-    <Compile Include="CsUtil\Collections\Tree\BinaryTree\RBTreeTest.cs" />
+    <Compile Include="CsUtil\Collections\BinaryTree\AvlTreeTest.cs" />
+    <Compile Include="CsUtil\Collections\BinaryTree\BinaryTreeTest.cs" />
+    <Compile Include="CsUtil\Collections\BinaryTree\RBTreeTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestUtility.cs" />
@@ -59,6 +59,7 @@
       <Name>CsUtil</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
