--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -46,8 +46,10 @@
     <Compile Include="CsUtil\Collections\BinaryTree\AvlTreeTest.cs" />
     <Compile Include="CsUtil\Collections\BinaryTree\BinaryTreeTest.cs" />
     <Compile Include="CsUtil\Collections\BinaryTree\RBTreeTest.cs" />
+    <Compile Include="CsUtil\Collections\Select\SelectionTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="TestUtility.cs" />
   </ItemGroup>
   <ItemGroup>
