--- a/CsUtil/CsUtil.csproj
+++ b/CsUtil/CsUtil.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Collections\BinaryTree\Cache.cs" />
     <Compile Include="Collections\BinaryTree\IBinaryTree.cs" />
     <Compile Include="Collections\BinaryTree\RBTree.cs" />
+    <Compile Include="Collections\Select\Selection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Utility.cs" />
   </ItemGroup>
