--- a/CsUtil/CsUtil.csproj
+++ b/CsUtil/CsUtil.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Collections\BinaryTree\RBTree.cs" />
     <Compile Include="Collections\Select\Selection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\BitOperation.cs" />
     <Compile Include="Util\Utility.cs" />
   </ItemGroup>
   <ItemGroup />
