--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{BAFFD185-BFAA-4B05-8EBF-C0F607640933}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test</RootNamespace>
+    <RootNamespace>CsUtil.Test</RootNamespace>
     <AssemblyName>Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -43,10 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsUtil\Collections\BinaryTree\AvlTreeTest.cs" />
-    <Compile Include="CsUtil\Collections\BinaryTree\BinaryTreeTest.cs" />
-    <Compile Include="CsUtil\Collections\BinaryTree\RBTreeTest.cs" />
-    <Compile Include="CsUtil\Collections\Select\SelectionTest.cs" />
+    <Compile Include="ExecTimer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
@@ -54,12 +51,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CsUtil\CsUtil.csproj">
-      <Project>{98131d90-a25e-4f86-8d90-c02eac8349bd}</Project>
-      <Name>CsUtil</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
