--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{26E7FA2B-04C1-43E8-BF7A-596A99687949}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{17F4F74D-75F0-481A-9FAB-9F248DA600AF}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CsUtil</RootNamespace>
-    <AssemblyName>CsUtil</AssemblyName>
+    <RootNamespace>Test</RootNamespace>
+    <AssemblyName>Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,25 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Crypto\CrypterImpl.cs" />
-    <Compile Include="Crypto\Crypter.cs" />
+    <Compile Include="Crypto\TestCrypter.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test\ExecTimer.cs" />
-    <Compile Include="Test\TestBase.cs" />
-    <Compile Include="Test\TestUtility.cs" />
-    <Compile Include="Util\ActionChain.cs" />
-    <Compile Include="Util\BitOperation.cs" />
-    <Compile Include="Util\CSharpUtil.cs" />
-    <Compile Include="Util\FileUtil.cs" />
-    <Compile Include="Util\Logger.cs" />
-    <Compile Include="Util\Md5Util.cs" />
-    <Compile Include="Util\Utility.cs" />
-    <Compile Include="Util\XmlUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\CsUtil\CsUtil.csproj">
+      <Project>{26e7fa2b-04c1-43e8-bf7a-596a99687949}</Project>
+      <Name>CsUtil</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
