--- a/CsUtil.Test/CsUtil.Test.csproj
+++ b/CsUtil.Test/CsUtil.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{17F4F74D-75F0-481A-9FAB-9F248DA600AF}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test</RootNamespace>
-    <AssemblyName>Test</AssemblyName>
+    <RootNamespace>CsUtil.Test</RootNamespace>
+    <AssemblyName>CsUtil.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
