--- a/CsUtil.Test/CsUtil.Test.csproj
+++ b/CsUtil.Test/CsUtil.Test.csproj
@@ -45,7 +45,6 @@
   <ItemGroup>
     <Compile Include="Crypto\TestCrypter.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -55,6 +54,9 @@
       <Project>{26e7fa2b-04c1-43e8-bf7a-596a99687949}</Project>
       <Name>CsUtil</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
