--- a/CsUtil/CsUtil.csproj
+++ b/CsUtil/CsUtil.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
     <Compile Include="Crypto\CrypterImpl.cs" />
     <Compile Include="Crypto\Crypter.cs" />
+    <Compile Include="Pool\DataPoolBase.cs" />
+    <Compile Include="Pool\DataPool.cs" />
+    <Compile Include="Pool\DataPoolFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\ExecTimer.cs" />
     <Compile Include="Test\TestBase.cs" />
@@ -58,6 +61,7 @@
     <Compile Include="Util\FileUtil.cs" />
     <Compile Include="Util\Logger.cs" />
     <Compile Include="Util\Md5Util.cs" />
+    <Compile Include="Util\Singleton.cs" />
     <Compile Include="Util\Utility.cs" />
     <Compile Include="Util\XmlUtil.cs" />
   </ItemGroup>
